fix: margin collapsing

--- a/styles/markdown.css
+++ b/styles/markdown.css
@@ -93,6 +93,8 @@
 .markdown-body {
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
+  display: flex;
+  flex-direction: column;
   margin: 0;
   color: var(--color-fg-default);
   font-family: Pretendard, sans-serif;
